# json2jsonl

./: Makefile  README.md  pyproject.toml
flex_json/: __init__.py  jsonal.py
json2jsonl/: __init__.py  main.py
tests/: MOCK_DATA.json  MOCK_DATA.jsonl  conftest.py  test_json3jsonl.py  test_jsonal.py
